// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders checked state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch om-react-ui-switch-checked"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
          >
            Checked
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Checked"
            checked=""
            class="om-react-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch om-react-ui-switch-checked"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
        >
          Checked
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Checked"
          checked=""
          class="om-react-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
          >
            Test Label
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Test Label"
            class="om-react-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
        >
          Test Label
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Test Label"
          class="om-react-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch om-react-ui-switch-disabled"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-disabled"
          >
            Disabled
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Disabled"
            class="om-react-ui-switch-input"
            disabled=""
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch om-react-ui-switch-disabled"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-disabled"
        >
          Disabled
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Disabled"
          class="om-react-ui-switch-input"
          disabled=""
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders disabled state with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch om-react-ui-switch-disabled"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-disabled"
          >
            Disabled
          </span>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-disabled"
          >
            Description
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Disabled"
            class="om-react-ui-switch-input"
            disabled=""
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch om-react-ui-switch-disabled"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-disabled"
        >
          Disabled
        </span>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-disabled"
        >
          Description
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Disabled"
          class="om-react-ui-switch-input"
          disabled=""
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
          >
            Label
          </span>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-default-secondary"
          >
            Description
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Label"
            class="om-react-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
        >
          Label
        </span>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-color-default-secondary"
        >
          Description
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Label"
          class="om-react-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders with right label placement 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-switch om-react-ui-switch-right"
      >
        <span
          class="om-react-ui-switch-content"
        >
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
          >
            Right
          </span>
        </span>
        <span
          class="om-react-ui-switch-track-wrapper"
        >
          <input
            aria-label="Right"
            class="om-react-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-react-ui-switch-track"
          >
            <span
              class="om-react-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-switch om-react-ui-switch-right"
    >
      <span
        class="om-react-ui-switch-content"
      >
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default"
        >
          Right
        </span>
      </span>
      <span
        class="om-react-ui-switch-track-wrapper"
      >
        <input
          aria-label="Right"
          class="om-react-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-react-ui-switch-track"
        >
          <span
            class="om-react-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
